# bachelorthesis

./: .gitattributes  .gitignore  csv_png_generator.py  csv_png_generator_random.py  launch.json  main_search.sh  pyproject.toml  search_average_distance_with_obsts.py  search_average_distance_with_obsts_random.py  search_collisions_obsts_metaheuristic.py  search_collisions_obsts_random.py
docs/jupyter/: 01_Installation.ipynb  02_Defining_Experiment.ipynb  02_Defining_Experiment.py  linearExample.py
myenv/: pyvenv.cfg
opensbt/: config.py
opensbt/algorithm/: optimizer.py
opensbt/experiment/: search_configuration.py
opensbt/simulation/: simulator.py
projects/quad_swarm_rl/: .gitignore
projects/quad_swarm_rl/gym_art/: __init__.py
projects/quad_swarm_rl/gym_art/quadrotor_multi/: quadrotor_multi.py
projects/quad_swarm_rl/gym_art/quadrotor_multi/scenarios/obstacles/: o_base.py  o_static_same_goal.py
projects/quad_swarm_rl/train_dir/controller1/: config.json
projects/quad_swarm_rl/train_dir/controller2/: config.json
projects/quad_swarm_rl/train_dir/default_experiment/: 1.txt  config.json  git.diff
projects/quad_swarm_rl/train_dir/final/.summary/0/: events.out.tfevents.1726553225.0ff38d899653
projects/quad_swarm_rl/train_dir/obstacles_multi/final_/00_final_see_0_q.n.age_8/: config.json  des.txt  git.diff  sf_log.txt
projects/quad_swarm_rl/train_dir/obstacles_multi/obst_size_random_/00_obst_size_random_see_0/: config.json  git.diff  sf_log.txt
projects/quad_swarm_rl/train_dir/size_random/: config.json  git.diff
(+15 files in other folders)
