[tool.poetry]
package-mode = false
name = "OpenSBT-fork"

[tool.poetry.dependencies]
python = "~3.9"
deap = "==1.4.1"
numpy = "==1.23.5"
scipy = "==1.10.1"
matplotlib = "==3.7.4"
docker = "==6.1.3"
pandas = "==2.0.3"
setuptools = ">=61.0"
scikit-learn = "==1.3.2"
pymoo = "==0.6.0.1"
jupyter = "1.0.0"
matlabengine = "23.2.3"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
